add move enemy joystick action

--- a/game-local/FreeRTOS_LC5110_Joystick/.cproject
+++ b/game-local/FreeRTOS_LC5110_Joystick/.cproject
@@ -116,7 +116,7 @@
 						<entry flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="Drivers"/>
 						<entry flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="Inc"/>
 						<entry flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="Middlewares"/>
-						<entry excluding="NOKIA5110_fb.c|atraso.c|main.c" flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="Src"/>
+						<entry excluding="app.cpp|NOKIA5110_fb.c|atraso.c|main.c" flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="Src"/>
 						<entry flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="startup"/>
 					</sourceEntries>
 				</configuration>
